# user-manual

./: .gitlab-ci.yml  404.html  README.md  index.html  mkdocs.yml  publications.html  pyproject.toml  quick-start.html
.github/workflows/: python-ci.yml
docs/: index.md  overview.md  quick-start.md
docs/reference/: config-file.md  config-ref.md  reference.md
docs/run/: run.md
overview/: index.html
publications/: index.html
quick-start/: index.html
reference/: config-file.html  config-ref.html
reference/config-file/: index.html
reference/config-ref/: index.html
reference/reference/: index.html
run/: run.html
run/run/: index.html
search/: search_index.json
